// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation complains about extra properties 1`] = `"Validation error: unexpected property \\"foo\\""`;

exports[`validation complains about extra properties 2`] = `"Validation error for key 'subItems.0': unexpected property \\"foo\\""`;

exports[`validation complains about missing properties 1`] = `"Validation error for key 'name': expected a string, not undefined"`;

exports[`validation complains about missing properties 2`] = `"Validation error for key 'value': expected a string, not undefined"`;

exports[`validation complains about missing properties 3`] = `"Validation error for key 'value': expected a string, not undefined"`;

exports[`validation complains about missing properties 4`] = `"Validation error for key 'enabled': expected a boolean, not undefined"`;

exports[`validation complains about missing properties 5`] = `"Validation error for key 'subItems.1.value': expected a string, not undefined"`;

exports[`validation complains about missing properties 6`] = `"Validation error for key 'nextItem.nextItem.enabled': expected a boolean, not a string"`;

exports[`validation complains about values with the wrong type 1`] = `"Validation error for key 'name': expected a string, not a number"`;

exports[`validation complains about values with the wrong type 2`] = `"Validation error for key 'value': expected a string, not a boolean"`;

exports[`validation complains about values with the wrong type 3`] = `"Validation error for key 'enabled': expected a boolean, not a string"`;

exports[`validation complains about values with the wrong type 4`] = `"Validation error for key 'value': expected a string, not an array"`;

exports[`validation complains about values with the wrong type 5`] = `"Validation error for key 'kind': expected \\"A\\" | \\"B\\" | \\"C\\", not a string"`;

exports[`validation complains about values with the wrong type 6`] = `"Validation error for key 'kind': expected \\"A\\" | \\"B\\" | \\"C\\", not a number"`;

exports[`validation does not complain about missing optional properties 1`] = `
Object {
  "enabled": false,
  "name": "",
  "value": null,
}
`;

exports[`validation works as a type guard 1`] = `
Object {
  "valid": false,
}
`;

exports[`validation works as a type guard 2`] = `
Object {
  "name": 3,
  "valid": false,
}
`;

exports[`validation works as a type guard 3`] = `
Object {
  "name": "a",
  "valid": false,
}
`;

exports[`validation works as a type guard 4`] = `
Object {
  "name": "b",
  "valid": false,
  "value": null,
}
`;

exports[`validation works as a type guard 5`] = `
Object {
  "enabled": true,
  "name": "b",
  "valid": true,
  "value": null,
}
`;

exports[`validation works as a type guard 6`] = `
Object {
  "enabled": true,
  "kind": "B",
  "name": "b",
  "valid": true,
  "value": null,
}
`;

exports[`validation works with union types 1`] = `"Validation error: expected an array, not a number"`;

exports[`validation works with union types 2`] = `"Validation error for key '0': expected a number, not an array"`;

exports[`validation works with union types 3`] = `"Validation error for key '0': expected a number, not a string"`;

exports[`validation works with union types 4`] = `"Validation error: expected an array, not null"`;

exports[`validation works with union types 5`] = `"Validation error: expected an array, not undefined"`;
